rentaspace/main/default/objects/Storage_Unit__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heated</fullName>
            </value>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Maximum-Security</fullName>
            </value>
            <value>
                <fullName>24/7 Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>