rentaspace/main/default/objects/Storage_Unit__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area of the Storage Unit</description>
    <formula>Length__c *  Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>