rentaspace/main/default/objects/Storage_Unit__c/fields/Dollar_Per_Foot__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Per_Foot__c</fullName>
    <formula>Area__c /  Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollar Per Foot</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>