rentaspace/main/default/objects/Storage_Unit__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size of Unit in Text Form</description>
    <label>Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>