rentaspace/main/default/objects/Storage_Unit__c/fields/Storage_Account__c.field-meta.xml
<CustomField>
    <fullName>Storage_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storage Units</relationshipLabel>
    <relationshipName>Storage_Units</relationshipName>
    <type>Lookup</type>
</CustomField>