rentaspace/main/default/objects/Storage_Unit__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <referenceTo>Storage_Location__c</referenceTo>
    <relationshipLabel>Storage Units</relationshipLabel>
    <relationshipName>Storage_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>