rentaspace/main/default/objects/Storage_Unit__c/validationRules/Check_for_Length_And_Width.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Length_And_Width</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Length__c )  || ISBLANK( Width__c )</errorConditionFormula>
    <errorMessage>Requires proportions to calculate area.</errorMessage>
</ValidationRule>